--- a/index.html
+++ b/index.html
@@ -202,6 +202,16 @@
                             <span class="skills__percentage skills__html"></span>
                         </div>
                     </div>
+                    
+                    <div class="skills__data">
+                        <div class="skills__titles">
+                            <h3 class="skills__name">CSS</h3>
+                            <span class="skills__number">50%</span>
+                        </div>
+                        <div class="skills__bar">
+                            <span class="skills__percentage skills__html"></span>
+                        </div>
+                    </div>
 
                     <div class="skills__data">
                         <div class="skills__titles">
